k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-api
  namespace: mlops-local
  labels:
    app: mlops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-api
  template:
    metadata:
      labels:
        app: mlops-api
    spec:
      containers:
        - name: mlops-api
          image: mlops-logistic-regression-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: api-config
              mountPath: /app/configs/config.yaml
              subPath: config.yaml
      volumes:
        - name: api-config
          configMap:
            name: mlops-api-config
