k8s/promtail-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: mlops-local
  labels:
    app: promtail
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: default
      containers:
        - name: promtail
          image: grafana/promtail:latest
          args:
            - -config.file=/etc/promtail/promtail-config.yml
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail/promtail-config.yml
              subPath: promtail-config.yml
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: pods
          hostPath:
            path: /var/log/pods
