k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-api-service
  namespace: mlops-local
  labels:
    app: mlops-api
spec:
  type: ClusterIP
  selector:
    app: mlops-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
