k8s/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  namespace: mlops-local
  labels:
    app: jaeger
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
