k8s/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: mlops-local
  labels:
    app: loki
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
