k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-api-ingress
  namespace: mlops-local
spec:
  rules:
    - host: mlops-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-api-service
                port:
                  number: 8000
